--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,18 +4,22 @@
   --blanco: #FFF;
   --fuente-principal: 'Outfit', sans-serif;
 }
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
 body {
   font-size: 2rem;
   font-family: var(--fuente-principal);
   line-height: 1.5;
 }
+
 img {
   max-width: 100%;
 }
@@ -25,6 +29,7 @@ img {
   margin: 0 auto;
   width: 95%;
 }
+
 [class*="heading"] {
   font-size: 4rem;
   text-align: center;
@@ -32,3 +37,17 @@ img {
   color: var(--primary);
   margin: 5rem 0;
 }
+
+.navegacion {
+  margin-top: 5rem;
+  display: flex;
+  gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .navegacion {
+      margin: 0;
+  }
+}
+
+
