--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,17 @@ img {
 }
 
 
+.error,
+.error-enlace {
+  font-size: 2.4rem;
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.error-enlace{
+  font-size: 1.8rem;
+  display: block;
+  text-decoration: none;
+  color: var(--primary);
+}
+
