--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,24 @@ img {
 .navegacion {
   margin-top: 5rem;
   display: flex;
+  align-items: center;
   gap: 2rem;
+}
+
+.navegacion a {
+  color: var(--blanco);
+  text-decoration: none;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: .5rem;
+  transition-property: background-color;
+  transition-duration: 300ms;
+}
+
+.navegacion a:hover,
+.active {
+background-color: var(--primary);
 }
 
 @media (min-width: 768px) {
