Detalles de la guitarra se agrega un form para seleccionar la cantidad

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
   --primary: #e99401;
   --negro: #262626;
   --blanco: #FFF;
+  --gris-claro: #F9FAFB;
   --fuente-principal: 'Outfit', sans-serif;
 }
 
