Carrito > agregar guitarra, calcular subtotal con respecto a la cantidad seleccionada

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
   --primary: #e99401;
   --negro: #262626;
   --blanco: #FFF;
-  --gris-claro: #F9FAFB;
+  --gris-claro: #dedede;
   --fuente-principal: 'Outfit', sans-serif;
 }
 
