Carrito > calcular total de compra y eliminar producto

--- a/styles/carrito.module.css
+++ b/styles/carrito.module.css
@@ -21,6 +21,7 @@
     align-items: center;
     padding: 3rem 0;
     border-bottom: 1px solid #cfcfcf;
+    position: relative;
 
 
 }
@@ -57,6 +58,10 @@
     background-color: var(--gris-claro);
     padding: 3rem;
     border-radius: 10px;
+    position: sticky;
+    top: 3rem;
+
+
 }
 
 .select {
@@ -67,5 +72,17 @@
     border-radius: 1rem;
     width: 100%;
     margin-bottom: 2rem;
+}
+
+.eliminar {
+    all: unset;
+    position: absolute;
+    top: 3rem;
+    right: 1rem;
+    font-weight: 900;
+}
+
+.eliminar:hover {
+    cursor: pointer;
 }
 
